...
      print("Error adding friends: $e");
    }
  }

  Widget _buildToggleButton() {
    return ElevatedButton(
      key: Key('toggleViewButton'),
      onPressed: _toggleView,
      style: ElevatedButton.styleFrom(
        padding: EdgeInsets.zero,
        shape: RoundedRectangleBorder(
          borderRadius: BorderRadius.circular(20),
        ),
...
              Navigator.pushNamed(context, '/profilePage');
            },
            child: const Padding(
              padding: EdgeInsets.only(right: 16.0),
              child: Icon(
                Icons.menu,
                key: Key('profilePageButton'),
                size: 30.0,  // Adjust the size as per your design
              ),
            ),
          )

        ],
...
        type: BottomNavigationBarType.fixed,
        iconSize: 30.0,
        selectedLabelStyle: const TextStyle(fontSize: 18, fontWeight: FontWeight.bold),
        unselectedLabelStyle: const TextStyle(fontSize: 18),
        items: const [
          BottomNavigationBarItem(
            icon: Icon(Icons.event, size: 40, key: Key('myEventsButton')),
            label: 'My Events',
          ),
          BottomNavigationBarItem(
            icon: Icon(Icons.card_giftcard, size: 40, key: Key('myGiftsButton')),
            label: 'My Gifts',
          ),
        ],
      ),
    );
  }
...
